<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/main"
    tools:context=".view.HomeActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/logos">

                <ImageView
                    android:id="@+id/logoLeft"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:paddingEnd="32dp"
                    app:srcCompat="@drawable/so_khcn_lamdong_logo" />

                <ImageView
                    android:id="@+id/logoRight"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:paddingStart="32dp"
                    app:srcCompat="@drawable/cd_dl_logo" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bannerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginBottom="-10dp"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="20dp"
                    app:srcCompat="@drawable/banner" />

                <TextView
                    android:id="@+id/bannerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/banner"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="@color/main"
                    android:textStyle="bold"
                    android:text="@string/bannerText" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="60dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/main"
            android:background="@drawable/button"
            android:text="@string/btnStart" />

        <Button
            android:id="@+id/btnDictionary"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/main"
            android:background="@drawable/button"
            android:text="@string/btnDictionary" />

        <!-- Nút mới: Thay đổi IP -->
        <Button
            android:id="@+id/btnChangeIp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/main"
            android:background="@drawable/button"
            android:text="Thay đổi IP" />

        <LinearLayout
            android:id="@+id/etc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/terms"
                    android:textColor="@color/main"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/version"
                    android:textColor="@color/main"
                    android:textStyle="bold" />
        </LinearLayout>

</LinearLayout>